# Default_Prediction_MLOps

./: .gitignore  README.md  credit_default_eda.ipynb  pyproject.toml  requirements.txt  setup_env.bat  setup_env.sh
data/: predictions.csv
server/src/: mlops_config.py
server/src/dev_server/: inference.py
server/src/dev_server_ml/: __models_registry.py  constants.py  model.py  preprocess.py  train.py  utils.py
src/: XGBoost_model.py
