# ml_ops/pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "server"
version = "0.1.0"
description = "MLOps pipeline with modular training and inference"
authors = [
    { name = "Yerim Shin", email = "yrs1107@naver.com" }
]
dependencies = [
    "scikit-learn>=1.0",
    "xgboost>=1.5",
    "pandas>=1.3,<2.0",
    "numpy>=1.20",
    "joblib",
    "python-dotenv"
]

[tool.setuptools.packages.find]
where = ["server/src"]